# BlueDesc_pywrapper

./: .flake8  .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/BlueDesc_pywrapper/: __init__.py  bluedesc_pywrapper.py  dtypes.json  utils.py
tests/: __init__.py  constants.py  test_descriptors.py  test_parallel.py  test_utils.py  test_version.py
tests/data/: diverse_subset_2k.smi
